# manipulator_gz_sim

./: README.md
manipulator_application/: CMakeLists.txt  package.xml
manipulator_application/src/: reference_generator.cpp
manipulator_bringup/: CMakeLists.txt  package.xml
manipulator_bringup/config/: manipulator_controller.yaml
manipulator_bringup/launch/: manipulator_setup.launch.py
manipulator_description/: CMakeLists.txt  package.xml
manipulator_description/models/r6bot/urdf/: r6bot_description.urdf.xacro
manipulator_gazebo/: CMakeLists.txt  README.md  package.xml
manipulator_gazebo/include/manipulator_gazebo/: BasicSystem.hh  FullSystem.hh
manipulator_gazebo/src/: BasicSystem.cc  FullSystem.cc
manipulator_gazebo/worlds/: diff_drive.sdf
