<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_application</name>
  <version>0.0.0</version>
  <description>Application-specific implementations for the ros_gz_project example</description>
  <maintainer email="baljinder.singh-bal@cyu.fr">Baljinder Singh Bal</maintainer>
  <license>Apache 2.0</license>
  <author>Baljinder Singh Bal</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>control_msgs</build_depend>
  <depend>kdl_parser</depend>
  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>
  
  <exec_depend>control_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

